add atom file convert

--- a/data_process/convert_atom.ipynb
+++ b/data_process/convert_atom.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'/home/cseadmin/data/cys/TrafficFlowModel/data_process'"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
        " (6383446647, 6383446646, 0)]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "[84306 rows x 3 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "      <th>0</th>\n",
        "      <td>(598153574, 2767949724, 0)</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.1742099, 22.5622634), (114.1744957, 22.5...</td>\n",
+       "      <td>[(114.1742099, 22.5622634), (114.1744957, 22.5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -260,19 +260,19 @@
        "      <th>2</th>\n",
        "      <td>(2767949724, 2768006811, 1)</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.1782142, 22.5595428), (114.1791269, 22.5...</td>\n",
+       "      <td>[(114.1782142, 22.5595428), (114.1791269, 22.5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>(598153574, 297121337, 0)</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.1742099, 22.5622634), (114.174588, 22.56...</td>\n",
+       "      <td>[(114.1742099, 22.5622634), (114.174588, 22.56...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>(297121337, 2320506360, 0)</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.2259536, 22.5668991), (114.2284345, 22.5...</td>\n",
+       "      <td>[(114.2259536, 22.5668991), (114.2284345, 22.5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -330,11 +330,11 @@
        "84305  (9148694974, 9148694973, 0)  LineString   \n",
        "\n",
        "                                             coordinates  \n",
-       "0      ((114.1742099, 22.5622634), (114.1744957, 22.5...  \n",
+       "0      [(114.1742099, 22.5622634), (114.1744957, 22.5...  \n",
        "1                                                   None  \n",
-       "2      ((114.1782142, 22.5595428), (114.1791269, 22.5...  \n",
-       "3      ((114.1742099, 22.5622634), (114.174588, 22.56...  \n",
-       "4      ((114.2259536, 22.5668991), (114.2284345, 22.5...  \n",
+       "2      [(114.1782142, 22.5595428), (114.1791269, 22.5...  \n",
+       "3      [(114.1742099, 22.5622634), (114.174588, 22.56...  \n",
+       "4      [(114.2259536, 22.5668991), (114.2284345, 22.5...  \n",
        "...                                                  ...  \n",
        "84301                                               None  \n",
        "84302                                               None  \n",
@@ -345,7 +345,7 @@
        "[84306 rows x 3 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
     "    if \"geometry\" not in road_data_dict:\n",
     "        return row\n",
     "\n",
-    "    row[\"coordinates\"]=road_data_dict[\"geometry\"].coords\n",
+    "    row[\"coordinates\"]=list(road_data_dict[\"geometry\"].coords)\n",
     "\n",
     "    return row\n",
     "\n",
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -413,31 +413,31 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.1742099, 22.5622634), (114.1744957, 22.5...</td>\n",
+       "      <td>[(114.1742099, 22.5622634), (114.1744957, 22.5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.1782142, 22.5595428), (114.1791269, 22.5...</td>\n",
+       "      <td>[(114.1782142, 22.5595428), (114.1791269, 22.5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.1742099, 22.5622634), (114.174588, 22.56...</td>\n",
+       "      <td>[(114.1742099, 22.5622634), (114.174588, 22.56...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.2259536, 22.5668991), (114.2284345, 22.5...</td>\n",
+       "      <td>[(114.2259536, 22.5668991), (114.2284345, 22.5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.2259536, 22.5668991), (114.2284254, 22.5...</td>\n",
+       "      <td>[(114.2259536, 22.5668991), (114.2284254, 22.5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -449,31 +449,31 @@
        "      <th>16148</th>\n",
        "      <td>16148</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.0159237, 22.6483238), (114.015941, 22.64...</td>\n",
+       "      <td>[(114.0159237, 22.6483238), (114.015941, 22.64...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16149</th>\n",
        "      <td>16149</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.0105371, 22.6496528), (114.0085801, 22.6...</td>\n",
+       "      <td>[(114.0105371, 22.6496528), (114.0085801, 22.6...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16150</th>\n",
        "      <td>16150</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.0122871, 22.6624932), (114.0114325, 22.6...</td>\n",
+       "      <td>[(114.0122871, 22.6624932), (114.0114325, 22.6...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16151</th>\n",
        "      <td>16151</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.0122368, 22.6624536), (114.0122989, 22.6...</td>\n",
+       "      <td>[(114.0122368, 22.6624536), (114.0122989, 22.6...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16152</th>\n",
        "      <td>16152</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.0207765, 22.6367934), (114.0208513, 22.6...</td>\n",
+       "      <td>[(114.0207765, 22.6367934), (114.0208513, 22.6...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -482,22 +482,22 @@
       ],
       "text/plain": [
        "       geo_id        type                                        coordinates\n",
-       "0           0  LineString  ((114.1742099, 22.5622634), (114.1744957, 22.5...\n",
-       "1           1  LineString  ((114.1782142, 22.5595428), (114.1791269, 22.5...\n",
-       "2           2  LineString  ((114.1742099, 22.5622634), (114.174588, 22.56...\n",
-       "3           3  LineString  ((114.2259536, 22.5668991), (114.2284345, 22.5...\n",
-       "4           4  LineString  ((114.2259536, 22.5668991), (114.2284254, 22.5...\n",
+       "0           0  LineString  [(114.1742099, 22.5622634), (114.1744957, 22.5...\n",
+       "1           1  LineString  [(114.1782142, 22.5595428), (114.1791269, 22.5...\n",
+       "2           2  LineString  [(114.1742099, 22.5622634), (114.174588, 22.56...\n",
+       "3           3  LineString  [(114.2259536, 22.5668991), (114.2284345, 22.5...\n",
+       "4           4  LineString  [(114.2259536, 22.5668991), (114.2284254, 22.5...\n",
        "...       ...         ...                                                ...\n",
-       "16148   16148  LineString  ((114.0159237, 22.6483238), (114.015941, 22.64...\n",
-       "16149   16149  LineString  ((114.0105371, 22.6496528), (114.0085801, 22.6...\n",
-       "16150   16150  LineString  ((114.0122871, 22.6624932), (114.0114325, 22.6...\n",
-       "16151   16151  LineString  ((114.0122368, 22.6624536), (114.0122989, 22.6...\n",
-       "16152   16152  LineString  ((114.0207765, 22.6367934), (114.0208513, 22.6...\n",
+       "16148   16148  LineString  [(114.0159237, 22.6483238), (114.015941, 22.64...\n",
+       "16149   16149  LineString  [(114.0105371, 22.6496528), (114.0085801, 22.6...\n",
+       "16150   16150  LineString  [(114.0122871, 22.6624932), (114.0114325, 22.6...\n",
+       "16151   16151  LineString  [(114.0122368, 22.6624536), (114.0122989, 22.6...\n",
+       "16152   16152  LineString  [(114.0207765, 22.6367934), (114.0208513, 22.6...\n",
        "\n",
        "[16153 rows x 3 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +735,7 @@
     "4. Recover (dij)\n",
     "5. 时间划分: 15min 现在数据量太小\n",
     "\n",
-    "\\[dyna_id, type:\"trajectory\", time(ISO-8601), entity_id: 车牌 id, traj_id: 同一车的第几条轨迹, location: road_id, properties: 其他 \\]"
+    "\\[dyna_id, type:\"state\", time(ISO-8601), entity_id: 车牌 id, traj_id: 同一车的第几条轨迹, location: road_id, properties: 其他 \\]"
    ]
   },
   {
@@ -801,8 +801,50 @@
     "            traj_counter+=1\n",
     "        last_time=row[3]\n",
     "        \n",
-    "        # df_dyna.loc[len(df_dyna)]=[dyna_id_counter, \"trajectory\", row[3].strftime('%Y-%m-%dT%H:%M:%SZ'), taxi_dict[taxi_license], traj_counter, int(row[8]), [row[2], row[1]], row[4]]\n",
-    "        write_length=dyna_file.write(f\"{dyna_id_counter},trajectory,{row[3].strftime('%Y-%m-%dT%H:%M:%SZ')},{taxi_dict[taxi_license]},{traj_counter},{int(row[8])},\\\"{[row[2], row[1]]}\\\",{row[4]}\\n\")\n",
+    "        # df_dyna.loc[len(df_dyna)]=[dyna_id_counter, \"state\", row[3].strftime('%Y-%m-%dT%H:%M:%SZ'), taxi_dict[taxi_license], traj_counter, int(row[8]), [row[2], row[1]], row[4]]\n",
+    "        write_length=dyna_file.write(f\"{dyna_id_counter},state,{row[3].strftime('%Y-%m-%dT%H:%M:%SZ')},{taxi_dict[taxi_license]},{traj_counter},{int(row[8])},\\\"{[row[2], row[1]]}\\\",{row[4]}\\n\")\n",
+    "        dyna_id_counter+=1\n",
+    "        \n",
+    "dyna_file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 123193/123193 [18:15<00:00, 112.50it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mon. to Fri.\n",
+    "dyna_file=open(\"../data/libcity_atom/sz_taxi.dyna\", \"w\")\n",
+    "write_length=dyna_file.write(\"dyna_id,type,time,entity_id,traj_id,location,coordinates,speed\\n\") # disable printing return value\n",
+    "\n",
+    "dyna_id_counter=0\n",
+    "\n",
+    "for taxi_file in tqdm(os.listdir(\"../data/taxi_after_proc/tracks\")):\n",
+    "    if (int(taxi_file.split(\"_\")[0].split(\"-\")[1])>6):\n",
+    "        continue\n",
+    "    taxi_license=taxi_file.split(\"_\")[1].split(\".\")[0]\n",
+    "    df_taxi=pd.read_csv(f\"../data/taxi_after_proc/tracks/{taxi_file}\", parse_dates=[\"gps_time\"]).dropna() # drop?\n",
+    "    if df_taxi.empty:\n",
+    "        continue\n",
+    "    \n",
+    "    traj_counter=0\n",
+    "    last_time=df_taxi.iloc[0][\"gps_time\"]+pd.Timedelta(seconds=-600)\n",
+    "    for row in df_taxi.itertuples():\n",
+    "        if row[3]-last_time>pd.Timedelta(seconds=600):\n",
+    "            traj_counter+=1\n",
+    "        last_time=row[3]\n",
+    "        \n",
+    "        # df_dyna.loc[len(df_dyna)]=[dyna_id_counter, \"state\", row[3].strftime('%Y-%m-%dT%H:%M:%SZ'), taxi_dict[taxi_license], traj_counter, int(row[8]), [row[2], row[1]], row[4]]\n",
+    "        write_length=dyna_file.write(f\"{dyna_id_counter},state,{row[3].strftime('%Y-%m-%dT%H:%M:%SZ')},{taxi_dict[taxi_license]},{traj_counter},{int(row[8])},\\\"{[row[2], row[1]]}\\\",{row[4]}\\n\")\n",
     "        dyna_id_counter+=1\n",
     "        \n",
     "dyna_file.close()"
@@ -1148,7 +1190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# usr_df.to_csv(\"../data/libcity_atom/sz_taxi_train.usr\", index=False)"
+    "# usr_df.to_csv(\"../data/libcity_atom/sz_taxi.usr\", index=False)"
    ]
   },
   {
@@ -1162,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1179,13 +1221,15 @@
        " 'info': {'data_files': 'sz_taxi',\n",
        "  'geo_file': 'sz_taxi',\n",
        "  'rel_file': 'sz_taxi',\n",
+       "  'data_col': ['speed'],\n",
+       "  'output_dim': 1,\n",
        "  'weight_col': 'link_weight',\n",
        "  'init_weight_inf_or_zero': 'zero',\n",
        "  'set_weight_link_or_dist': 'link',\n",
        "  'calculate_weight_adj': False}}"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1212,8 +1256,8 @@
     "config[\"info\"][\"data_files\"]=\"sz_taxi\"\n",
     "config[\"info\"][\"geo_file\"]=\"sz_taxi\"\n",
     "config[\"info\"][\"rel_file\"]=\"sz_taxi\"\n",
-    "# config[\"info\"][\"data_col\"]=[\"speed\"]\n",
-    "# config[\"info\"][\"output_dim\"]=1\n",
+    "config[\"info\"][\"data_col\"]=[\"speed\"]\n",
+    "config[\"info\"][\"output_dim\"]=1\n",
     "config[\"info\"][\"weight_col\"]=\"link_weight\"\n",
     "# config[\"info\"][\"time_intervals\"]=60*15\n",
     "config[\"info\"][\"init_weight_inf_or_zero\"]=\"zero\" # adj matrix not connected: 0 (inf: infinity)\n",
@@ -1226,11 +1270,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# json.dump(config, open(\"../data/libcity_atom/config.json\", \"w\", encoding=\"utf-8\"), ensure_ascii=False)"
+    "json.dump(config, open(\"../data/libcity_atom/config.json\", \"w\", encoding=\"utf-8\"), ensure_ascii=False)"
    ]
   }
  ],
@@ -1239,18 +1283,6 @@
    "display_name": "Python [conda env:dz] *",
    "language": "python",
    "name": "conda-env-dz-py"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
   },
   "orig_nbformat": 4
  },
