add data processing pipeline script

--- a/data_process/fmm2atom.ipynb
+++ b/data_process/fmm2atom.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'/home/cseadmin/data/cys/TrafficFlowModel/data_process'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
        "[408 rows x 16 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -391,31 +391,31 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.0592761, 22.5315228), (114.0597732, 22.5...</td>\n",
+       "      <td>[(114.0592761, 22.5315228), (114.0597732, 22.5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.0613304, 22.5318565), (114.0608672, 22.5...</td>\n",
+       "      <td>[(114.0613304, 22.5318565), (114.0608672, 22.5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.0444457, 22.5328302), (114.0444143, 22.5...</td>\n",
+       "      <td>[(114.0444457, 22.5328302), (114.0444143, 22.5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.0456007, 22.5312996), (114.0473224, 22.5...</td>\n",
+       "      <td>[(114.0456007, 22.5312996), (114.0473224, 22.5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.0456007, 22.5312996), (114.0475796, 22.5...</td>\n",
+       "      <td>[(114.0456007, 22.5312996), (114.0475796, 22.5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -427,31 +427,31 @@
        "      <th>403</th>\n",
        "      <td>403</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.0628409, 22.537532), (114.062843, 22.537...</td>\n",
+       "      <td>[(114.0628409, 22.537532), (114.062843, 22.537...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>404</th>\n",
        "      <td>404</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.0630035, 22.5375338), (114.0630009, 22.5...</td>\n",
+       "      <td>[(114.0630035, 22.5375338), (114.0630009, 22.5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>405</th>\n",
        "      <td>405</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.0629074, 22.5338432), (114.0629128, 22.5...</td>\n",
+       "      <td>[(114.0629074, 22.5338432), (114.0629128, 22.5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>406</th>\n",
        "      <td>406</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.0629074, 22.5338432), (114.0627946, 22.5...</td>\n",
+       "      <td>[(114.0629074, 22.5338432), (114.0627946, 22.5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>407</th>\n",
        "      <td>407</td>\n",
        "      <td>LineString</td>\n",
-       "      <td>((114.0629984, 22.5378223), (114.0630079, 22.5...</td>\n",
+       "      <td>[(114.0629984, 22.5378223), (114.0630079, 22.5...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -460,22 +460,22 @@
       ],
       "text/plain": [
        "     geo_id        type                                        coordinates\n",
-       "0         0  LineString  ((114.0592761, 22.5315228), (114.0597732, 22.5...\n",
-       "1         1  LineString  ((114.0613304, 22.5318565), (114.0608672, 22.5...\n",
-       "2         2  LineString  ((114.0444457, 22.5328302), (114.0444143, 22.5...\n",
-       "3         3  LineString  ((114.0456007, 22.5312996), (114.0473224, 22.5...\n",
-       "4         4  LineString  ((114.0456007, 22.5312996), (114.0475796, 22.5...\n",
+       "0         0  LineString  [(114.0592761, 22.5315228), (114.0597732, 22.5...\n",
+       "1         1  LineString  [(114.0613304, 22.5318565), (114.0608672, 22.5...\n",
+       "2         2  LineString  [(114.0444457, 22.5328302), (114.0444143, 22.5...\n",
+       "3         3  LineString  [(114.0456007, 22.5312996), (114.0473224, 22.5...\n",
+       "4         4  LineString  [(114.0456007, 22.5312996), (114.0475796, 22.5...\n",
        "..      ...         ...                                                ...\n",
-       "403     403  LineString  ((114.0628409, 22.537532), (114.062843, 22.537...\n",
-       "404     404  LineString  ((114.0630035, 22.5375338), (114.0630009, 22.5...\n",
-       "405     405  LineString  ((114.0629074, 22.5338432), (114.0629128, 22.5...\n",
-       "406     406  LineString  ((114.0629074, 22.5338432), (114.0627946, 22.5...\n",
-       "407     407  LineString  ((114.0629984, 22.5378223), (114.0630079, 22.5...\n",
+       "403     403  LineString  [(114.0628409, 22.537532), (114.062843, 22.537...\n",
+       "404     404  LineString  [(114.0630035, 22.5375338), (114.0630009, 22.5...\n",
+       "405     405  LineString  [(114.0629074, 22.5338432), (114.0629128, 22.5...\n",
+       "406     406  LineString  [(114.0629074, 22.5338432), (114.0627946, 22.5...\n",
+       "407     407  LineString  [(114.0629984, 22.5378223), (114.0630079, 22.5...\n",
        "\n",
        "[408 rows x 3 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,14 +485,14 @@
     "\n",
     "df_geo[\"geo_id\"]=df_edges[\"fid\"]\n",
     "df_geo[\"type\"]=\"LineString\"\n",
-    "df_geo[\"coordinates\"]=df_edges[\"geometry\"].apply(lambda x: x.coords)\n",
+    "df_geo[\"coordinates\"]=df_edges[\"geometry\"].apply(lambda x: list(x.coords))\n",
     "\n",
     "df_geo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
