--- a/data_process/osmnx_pipeline/fmm_dataset.ipynb
+++ b/data_process/osmnx_pipeline/fmm_dataset.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cseadmin/dz/anaconda3/envs/dz/lib/python3.8/site-packages/requests/__init__.py:89: RequestsDependencyWarning: urllib3 (1.26.7) or chardet (4.0.0) doesn't match a supported version!\n",
+      "  warnings.warn(\"urllib3 ({}) or chardet ({}) doesn't match a supported \"\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'/home/cseadmin/data/cys/TrafficFlowModel/data_process'"
+       "'/home/cseadmin/dz/TrafficFlowModel/data_process/gis_pipeline'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,68 +42,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "minlat=22.5310\n",
-    "maxlat=22.5397\n",
-    "minlng=114.0442\n",
-    "maxlng=114.0633\n",
+    "DATA_PATH = \"../../data/\"\n",
+    "TAXI_DATA_PATH = \"../../data/taxi_after_proc/clean202006\"\n",
+    "DATASET = \"sz_taxi_202006\"\n",
+    "\n",
+    "MIN_LAT = 22.5311\n",
+    "MAX_LAT = 22.5517\n",
+    "MIN_LNG = 114.0439\n",
+    "MAX_LNG = 114.0633\n",
+    "\n",
+    "START_DAY = 1\n",
+    "END_DAY = 30\n",
+    "\n",
+    "DOWNSAMPLING_INTERVAL = 30\n",
+    "TRAJ_SPLIT_INTERVAL = 600\n",
+    "FLOW_AGG_INTERVAL_MINUTE = 15\n",
     "\n",
     "def contains(lat, lng):\n",
-    "    return lat>=minlat and lat<=maxlat and lng>=minlng and lng<=maxlng"
+    "    return lat >= MIN_LAT and lat <= MAX_LAT and lng >= MIN_LNG and lng <= MAX_LNG"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  8%|▊         | 21010/252072 [00:00<00:00, 383130.56it/s]\n"
+      "  1%|          | 7060/617790 [02:22<3:26:08, 49.38it/s]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_13898/541718384.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;31m# df_taxi = pd.read_csv(os.path.join(TAXI_DATA_PATH, taxi_file), parse_dates=[\"gps_time\"])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m     \u001b[0mdf_taxi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_pickle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTAXI_DATA_PATH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtaxi_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mdf_taxi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mempty\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/dz/lib/python3.8/site-packages/pandas/io/pickle.py\u001b[0m in \u001b[0;36mread_pickle\u001b[0;34m(filepath_or_buffer, compression, storage_options)\u001b[0m\n\u001b[1;32m    215\u001b[0m                     \u001b[0;31m# RawIOBase, BufferedIOBase, TextIOBase, TextIOWrapper, mmap]\";\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    216\u001b[0m                     \u001b[0;31m# expected \"IO[bytes]\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 217\u001b[0;31m                     \u001b[0;32mreturn\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhandles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhandle\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# type: ignore[arg-type]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    218\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mexcs_to_catch\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    219\u001b[0m                 \u001b[0;31m# e.g.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/dz/lib/python3.8/site-packages/numpy/core/numeric.py\u001b[0m in \u001b[0;36m_frombuffer\u001b[0;34m(buf, dtype, shape, order)\u001b[0m\n\u001b[1;32m   1859\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1860\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1861\u001b[0;31m \u001b[0;32mdef\u001b[0m \u001b[0m_frombuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbuf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1862\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mfrombuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbuf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1863\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "# Mon. to Fri.\n",
-    "gps_file=open(\"../data/fmm_data/gps.csv\", \"w\")\n",
-    "write_length=gps_file.write(\"id;x;y;time\\n\") # disable printing return value\n",
+    "gps_file = open(os.path.join(DATA_PATH, DATASET, f\"fmm_{DATASET}\", \"gps.csv\"), \"w\")\n",
+    "trash = gps_file.write(\"id;x;y;time\\n\")\n",
     "\n",
-    "timedelta_30=pd.Timedelta(seconds=30)\n",
-    "timedelta_600=pd.Timedelta(seconds=600)\n",
+    "timedelta_downsampling = pd.Timedelta(seconds=DOWNSAMPLING_INTERVAL)\n",
+    "timedelta_traj_split = pd.Timedelta(seconds=TRAJ_SPLIT_INTERVAL)\n",
     "\n",
-    "traj_counter=0 # this is global now\n",
-    "for taxi_file in tqdm(sorted(os.listdir(\"../data/taxi_after_proc/merged\"))):\n",
-    "    date=int(taxi_file.split(\"_\")[0].split(\"-\")[1])\n",
-    "    if date<2 or date>6:\n",
+    "traj_counter = 0\n",
+    "for taxi_file in tqdm(sorted(os.listdir(TAXI_DATA_PATH))):\n",
+    "    date = int(taxi_file.split(\"_\")[0].split(\"-\")[1])\n",
+    "    if date < START_DAY or date > END_DAY:\n",
     "        continue\n",
-    "    if os.path.getsize(f\"../data/taxi_after_proc/merged/{taxi_file}\")<100:\n",
+    "    if os.path.getsize(os.path.join(TAXI_DATA_PATH, taxi_file)) < 100:\n",
     "        continue\n",
-    "    df_taxi=pd.read_csv(f\"../data/taxi_after_proc/merged/{taxi_file}\", parse_dates=[\"gps_time\"])\n",
+    "    # df_taxi = pd.read_csv(os.path.join(TAXI_DATA_PATH, taxi_file), parse_dates=[\"gps_time\"])\n",
+    "    df_taxi = pd.read_pickle(os.path.join(TAXI_DATA_PATH, taxi_file))\n",
     "    if df_taxi.empty:\n",
     "        continue\n",
-    "    \n",
-    "    line_buffer=[]\n",
-    "    last_time=df_taxi.iloc[0][\"gps_time\"]+pd.Timedelta(seconds=-600)\n",
+    "\n",
+    "    line_buffer = []\n",
+    "    last_time = df_taxi.iloc[0][\"gps_time\"] + pd.Timedelta(seconds=-TRAJ_SPLIT_INTERVAL)\n",
     "    for row in df_taxi.itertuples():\n",
     "        if not contains(row[1], row[2]):\n",
     "            continue\n",
-    "        if row[3]-last_time<timedelta_30: # resample: drop <30s\n",
+    "        if row[3] - last_time < timedelta_downsampling:  # resample: drop <30s\n",
     "            continue\n",
-    "        if row[3]-last_time>timedelta_600:\n",
-    "            if len(line_buffer)>1: # only store length>1 traj\n",
-    "                write_length=gps_file.write(\"\".join(line_buffer))\n",
-    "                traj_counter+=1\n",
-    "            line_buffer=[]\n",
-    "            \n",
-    "        last_time=row[3]\n",
-    "        \n",
+    "        if row[3] - last_time > timedelta_traj_split:\n",
+    "            if len(line_buffer) > 1:  # only store length>1 traj\n",
+    "                trash = gps_file.write(\"\".join(line_buffer))\n",
+    "                traj_counter += 1\n",
+    "            line_buffer = []\n",
+    "\n",
+    "        last_time = row[3]\n",
+    "\n",
     "        line_buffer.append(f\"{traj_counter};{row[2]};{row[1]};{row[3]}\\n\")\n",
-    "        \n",
+    "\n",
     "gps_file.close()"
    ]
   },
@@ -157,22 +189,22 @@
     }
    ],
    "source": [
-    "%%bash\n",
-    "\n",
     "# https://github.com/cyang-kth/fmm/issues/166\n",
     "# https://github.com/cyang-kth/fmm/blob/master/example/osmnx_example/README.md\n",
-    "ubodt_gen --network ../data/fmm_data/edges.shp --network_id fid --source u --target v --output ../data/fmm_data/ubodt.txt --delta 0.03 --use_omp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
     "\n",
-    "nohup fmm --ubodt ../data/fmm_data/ubodt.txt --network ../data/fmm_data/edges.shp --network_id fid --source u --target v --gps ../data/fmm_data/gps.csv --gps_point -k 8 -r 0.003 -e 0.0005 --output ../data/fmm_data/mr.txt --use_omp --output_fields id,opath,cpath,mgeom > ../data/fmm_data/fmm.log 2>&1"
+    "os.system(\n",
+    "    \"ubodt_gen --network {} --network_id fid --source u --target v --output {} --delta 0.03 --use_omp\"\n",
+    "    .format(\n",
+    "        os.path.join(DATA_PATH, DATASET, f\"fmm_{DATASET}\", \"edges.shp\"),\n",
+    "        os.path.join(DATA_PATH, DATASET, f\"fmm_{DATASET}\", \"ubodt.txt\")))\n",
+    "os.system(\n",
+    "    \"fmm --ubodt {} --network {} --network_id fid --source u --target v --gps {} --gps_point -k 8 -r 0.003 -e 0.0005 --output {} --use_omp --output_fields id,opath,cpath,mgeom > {} 2>&1\"\n",
+    "    .format(\n",
+    "        os.path.join(DATA_PATH, DATASET, f\"fmm_{DATASET}\", \"ubodt.txt\"),\n",
+    "        os.path.join(DATA_PATH, DATASET, f\"fmm_{DATASET}\", \"edges.shp\"),\n",
+    "        os.path.join(DATA_PATH, DATASET, f\"fmm_{DATASET}\", \"gps.csv\"),\n",
+    "        os.path.join(DATA_PATH, DATASET, f\"fmm_{DATASET}\", \"mr.txt\"),\n",
+    "        os.path.join(DATA_PATH, DATASET, f\"fmm_{DATASET}\", \"fmm.log\")))"
    ]
   }
  ],
